--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "browserify": "^14.4.0",
     "browsernizr": "^2.2.0",
     "compass-mixins": "^0.12.10",
     "express": "^4.15.3",
-    "foundation-sites": "^6.4.1",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-buffer": "0.0.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
-    "pump": "^1.0.2"
+    "pump": "^1.0.2",
+    "tether": "^1.4.0"
   },
   "repository": {
     "type": "git",
@@ -44,5 +45,7 @@
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "sass-lint": "^1.10.2"
-  }
+  },
+  "sass": "scss/bootstrap.scss",
+  "style": "dist/css/bootstrap.css"
 }
