Fix naming in title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Landing Template",
+  "name": "landing_template",
   "version": "1.0.0",
   "description": "landing_template",
   "main": "index.js",
