--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "pump": "^1.0.2",
-    "tether": "^1.4.0"
+    "tether": "^1.4.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-sass-lint": "^1.3.2",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
+    "sass-lint": "^1.10.2"
   },
   "repository": {
     "type": "git",
@@ -40,13 +45,7 @@
     "express",
     "heroku"
   ],
-  "devDependencies": {
-    "gulp-jshint": "^2.0.4",
-    "gulp-sass-lint": "^1.3.2",
-    "jshint": "^2.9.5",
-    "jshint-stylish": "^2.2.1",
-    "sass-lint": "^1.10.2"
-  },
+  "devDependencies": {},
   "sass": "scss/bootstrap.scss",
   "style": "dist/css/bootstrap.css"
 }
